--- a/carioca-game.html
+++ b/carioca-game.html
@@ -20,7 +20,7 @@
   <script type="text/babel">
     const { useEffect, useMemo, useState } = React;
 
-    const APP_VERSION = "v0.5";
+    const APP_VERSION = "v0.6";
 
     const NS = "carioca-game-v2";
     const GAMES_KEY = NS + ":games";
@@ -156,6 +156,13 @@
       return naturals.every(c=>c.suit === naturals[0].suit);
     }
 
+    function hasAdjacentJokers(cards){
+      for(let i=0;i<cards.length-1;i++){
+        if(cards[i].joker && cards[i+1].joker) return true;
+      }
+      return false;
+    }
+
     function findUnorderedStraightAssignment(cards, len, mode="suit"){
       if(cards.length !== len || len < 3 || len > 13) return null;
       if(!naturalsMatchSuitMode(cards, mode)) return null;
@@ -183,6 +190,7 @@
         if(!ok) continue;
         let ji = 0;
         for(let i=0;i<len;i++) if(!slots[i]) slots[i] = jokers[ji++];
+        if(len === 13 && hasAdjacentJokers(slots)) continue;
         return { start, slots };
       }
       return null;
@@ -306,7 +314,7 @@
         humanName,
         computerName: randomComputerName(),
         aiLevel,
-        handSortMode: "rank",
+        handSortMode: "manual",
         turnAddedCardIds: [],
         phase: "playing",
         roundIndex: 0,
@@ -333,6 +341,8 @@
       const [state, setState] = useState(null);
       const [selected, setSelected] = useState([]);
       const [meldTarget, setMeldTarget] = useState("");
+      const [draggingCardId, setDraggingCardId] = useState(null);
+      const [dragOverCardId, setDragOverCardId] = useState(null);
 
       useEffect(()=>{
         if(!games.length){
@@ -367,7 +377,7 @@
 
       useEffect(()=>{
         if(!state || state.handSortMode) return;
-        setState(prev => prev ? { ...prev, handSortMode: "rank" } : prev);
+        setState(prev => prev ? { ...prev, handSortMode: "manual" } : prev);
       }, [state]);
 
       useEffect(()=>{
@@ -423,8 +433,25 @@
       function setHandSortMode(mode){
         setState(prev => {
           if(!prev) return prev;
-          if(mode !== "rank" && mode !== "suit") return prev;
+          if(mode !== "rank" && mode !== "suit" && mode !== "manual") return prev;
           return { ...prev, handSortMode: mode };
+        });
+      }
+
+      function moveCardInHand(draggedId, targetId){
+        if(!draggedId || !targetId || draggedId === targetId) return;
+        setState(prev => {
+          if(!prev) return prev;
+          const hand = prev.round.hands.human;
+          const from = hand.findIndex(c=>c.id===draggedId);
+          const to = hand.findIndex(c=>c.id===targetId);
+          if(from < 0 || to < 0 || from === to) return prev;
+          const next = structuredClone(prev);
+          const nextHand = next.round.hands.human;
+          const [moved] = nextHand.splice(from, 1);
+          nextHand.splice(to, 0, moved);
+          next.handSortMode = "manual";
+          return next;
         });
       }
 
@@ -580,16 +607,36 @@
             <div className="font-semibold">Your hand ({humanHand.length})</div>
             <label className="text-xs text-slate-600 flex items-center gap-2">
               Sort by
-              <select className="border rounded px-2 py-1 text-sm" value={state.handSortMode || "rank"} onChange={e=>setHandSortMode(e.target.value)}>
+              <select className="border rounded px-2 py-1 text-sm" value={state.handSortMode || "manual"} onChange={e=>setHandSortMode(e.target.value)}>
+                <option value="manual">Manual</option>
                 <option value="rank">Rank</option>
                 <option value="suit">Suit</option>
               </select>
             </label>
           </div>
           <div className="flex flex-wrap gap-2">
-            {sortHand(humanHand, state.handSortMode || "rank").map(c=>{
+            {(state.handSortMode === "manual" ? humanHand : sortHand(humanHand, state.handSortMode || "rank")).map(c=>{
               const active = selected.includes(c.id);
-              return <button key={c.id} onClick={()=>toggleSelect(c.id)} className={`px-2 py-1 rounded border ${active?"bg-blue-600 text-white":"bg-white"} ${cardColorWhenActive(c, active)}`}>{cardLabel(c)}</button>
+              const isDropTarget = dragOverCardId === c.id && draggingCardId !== c.id;
+              return <button
+                key={c.id}
+                draggable={state.handSortMode === "manual"}
+                onDragStart={()=>setDraggingCardId(c.id)}
+                onDragOver={e=>{
+                  if(state.handSortMode !== "manual") return;
+                  e.preventDefault();
+                  setDragOverCardId(c.id);
+                }}
+                onDrop={e=>{
+                  e.preventDefault();
+                  moveCardInHand(draggingCardId, c.id);
+                  setDraggingCardId(null);
+                  setDragOverCardId(null);
+                }}
+                onDragEnd={()=>{ setDraggingCardId(null); setDragOverCardId(null); }}
+                onClick={()=>toggleSelect(c.id)}
+                className={`px-2 py-1 rounded border ${active?"bg-blue-600 text-white":"bg-white"} ${cardColorWhenActive(c, active)} ${isDropTarget ? "ring-2 ring-emerald-500" : ""}`}
+              >{cardLabel(c)}</button>
             })}
           </div>
         </section>
